--- a/adja-json-api/pom.xml
+++ b/adja-json-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ru.no-js</groupId>
+        <groupId>ru.nojs</groupId>
         <artifactId>adja</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
