--- a/adja-json-vdovin/pom.xml
+++ b/adja-json-vdovin/pom.xml
@@ -5,11 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ru.no-js</groupId>
+        <groupId>ru.nojs</groupId>
         <artifactId>adja</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>adja-json-vdovin</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>ru.nojs</groupId>
+            <artifactId>adja-json-api</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 </project>
