--- a/adja-tests/pom.xml
+++ b/adja-tests/pom.xml
@@ -24,6 +24,11 @@
             <version>2.3.1</version>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+        </dependency>
+        <dependency>
             <groupId>ru.nojs</groupId>
             <artifactId>adja-json-vdovin</artifactId>
             <version>${project.parent.version}</version>
