--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
                 <artifactId>guava</artifactId>
                 <version>19.0-rc2</version>
             </dependency>
+            <dependency>
+                <groupId>javax.inject</groupId>
+                <artifactId>javax.inject</artifactId>
+                <version>1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
