--- a/adja-json-api/pom.xml
+++ b/adja-json-api/pom.xml
@@ -12,4 +12,12 @@
 
     <artifactId>adja-json-api</artifactId>
 
+    <dependencies>
+            <dependency>
+                    <groupId>commons-lang</groupId>
+                    <artifactId>commons-lang</artifactId>
+                    <version>2.6</version>
+            </dependency>
+    </dependencies>
+
 </project>
