--- a/adja-json-vdovin/pom.xml
+++ b/adja-json-vdovin/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>sisu-guice</artifactId>
             <version>2.1.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
