--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
                 <artifactId>javax.inject</artifactId>
                 <version>1</version>
             </dependency>
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>0.9.10</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
