--- a/adja-tests/pom.xml
+++ b/adja-tests/pom.xml
@@ -19,6 +19,11 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>ru.nojs</groupId>
             <artifactId>adja-json-vdovin</artifactId>
             <version>${project.parent.version}</version>
