--- a/adja-json-vdovin/pom.xml
+++ b/adja-json-vdovin/pom.xml
@@ -34,5 +34,9 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
