--- a/adja-json-api/pom.xml
+++ b/adja-json-api/pom.xml
@@ -11,5 +11,16 @@
     </parent>
 
     <artifactId>adja-json-api</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>3.0.11.Final</version>
+        </dependency>
+    </dependencies>
 
 </project>
