--- a/adja-tests/pom.xml
+++ b/adja-tests/pom.xml
@@ -29,6 +29,21 @@
             <version>1.10.19</version>
         </dependency>
         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>3.0.11.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>3.0.11.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.0.11.Final</version>
+        </dependency>
+        <dependency>
             <groupId>ru.nojs</groupId>
             <artifactId>adja-json-vdovin</artifactId>
             <version>${project.parent.version}</version>
